# world-model-harness

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  conftest.py  justfile  pyproject.toml
.agents/: README.md
.agents/docs/: README.md
.agents/scripts/: analyze_confidence.py  analyze_selection_vs_random 2.py  analyze_selection_vs_random.py  build_bc_pools.py  build_eval_pool_v2.py  capture_rollout_transcripts 2.py  collect_bc.py  collect_teacher.py  eval_student.py  eval_with_fallback.py  judge_real_transcripts.py  merge_gepa_reports.py  mine_full_pool.py  plot_agentic_modes.py  plot_confidence.py  plot_fidelity_tiers.py  plot_gated_frontier.py  plot_gepa_scaling.py  plot_judge_overhaul.py  plot_rag_compare.py  plot_trace_scaling.py  run_bc_training.sh  run_escalation.py  run_fidelity_tiers.py  run_gepa_scaling.py  run_judge_ablation.py  run_judge_quality.py  run_judge_regression.py  run_scenario_e2e 2.py  run_scenario_e2e.py  run_scenario_test1_domain 2.py  run_trace_scaling.py  train_sft_box.py
.github/workflows/: python-package.yml  web.yml
benchmarks/results/: tau2-base.json  tau2-optimized.json
benchmarks/swe-bench/: benchmark.toml
docs/: ARCHITECTURE.md  README.md  base_prompt_iteration.md  benchmark_results.md  gepa_research.md  harness_delta.md  ingest.braintrust.md  ingest.langfuse.md  ingest.langsmith.md  ingest.mastra.md  ingest.md  ingest.phoenix.md  ingest.posthog.md  research_directions.md  trace_scaling_law.md
docs/reference/: closed_loop.md  connect-library.md  eval_grid.md  eval_suites.md  failover.md  harness_delta.md  ingest.md
docs/research/: concurrency_scaling_law.md  confidence_calibration.md  fidelity_tiers.md  gepa_scaling_law.md  rag_optimization.md  trace_scaling_law.md  world_model_findings.md
docs/trace_scaling_results/: swe-bench.json  tau-bench.json
examples/: swe-bench.otel.jsonl  tau2-bench.otel.jsonl
examples/ingest/: braintrust_to_wmh.sh  langfuse_to_wmh.sh  langsmith_to_wmh.sh  mastra_to_wmh.sh  phoenix_to_wmh.sh  posthog_to_wmh.sh
examples/swe-bench/: README.md  capture_overnight.sh  convert_to_wmh.py  run_real_scenario.py  traces.otel.jsonl
examples/tau-bench/: .gitignore  README.md  convert_to_wmh.py  run.sh  run_real_scenario.py
examples/terminal-tasks/: README.md  capture_terminal.py  run.sh  traces.otel.jsonl
llm-waterfall/llm_waterfall/: __init__.py  pricing_test.py  waterfall.py  waterfall_test.py
scripts/: run_seed_stability.py
tools/swe-bench-capture/: .gitignore  README.md  convert_to_wmh.py  run.sh  run_real_scenario.py
tools/tau2-capture/: run.sh  run_real_scenario.py
tools/terminal-tasks-capture/: run_real_scenario.py
web/: README.md  package.json
web/scripts/: build-index.mjs
wmh/: conftest.py  repo_layout_test.py  telemetry.py  telemetry_test.py
wmh/agents/: __init__.py  default.py  definitions_test.py  meta.py  optimizer.py  optimizer_test.py  project.py  project_test.py
wmh/bench/: __init__.py  race.py  race_test.py
wmh/cli/: __init__.py  agent_session.py  agent_session_test.py  app.py  app_test.py  eval_closed_loop.py  eval_closed_loop_test.py  harness_app.py  harness_app_test.py  hosted_session.py  hosted_session_test.py  model_roles.py  model_roles_test.py  platform_cmds.py  platform_cmds_test.py  session_state.py  session_state_test.py  ui.py  ui_test.py  workspace_sync.py  workspace_sync_test.py
wmh/config/: __init__.py  card.py  card_test.py  config.py  config_test.py  dotenv.py  dotenv_test.py  settings.py  settings_test.py  store.py  store_test.py
wmh/connect/: __init__.py  api_test.py  apps.py  apps_test.py  brave.py  brave_test.py  connector.py  connector_test.py  credentials.py  credentials_test.py  github.py  github_test.py  google.py  google_test.py  notion.py  notion_test.py  oauth.py  oauth_test.py  slack.py  slack_test.py  store.py  store_test.py  types.py  types_test.py
wmh/core/: parsing.py  parsing_test.py  render.py  render_test.py  text.py  types.py
wmh/engine/: __init__.py  autoconfig.py  autoconfig_test.py  build.py  build_test.py  demo.py  demo_test.py  eval.py  eval_suites.py  eval_suites_test.py  eval_test.py  grounding.py  grounding_test.py  knowledge.py  knowledge_test.py  loader.py  play.py  prompts.py  replay.py  replay_test.py  reporting.py  workspace.py  workspace_test.py  world_model.py  world_model_test.py
wmh/env/: base.py  base_test.py  llm_agent 2.py  llm_agent_test 2.py
wmh/evals/: __init__.py  agreement.py  agreement_test.py  base.py  base_test.py  closed_loop.py  closed_loop_test.py  failover.py  failover_test.py  gold.py  gold_test.py  grid.py  grid_plot.py  grid_plot_test.py  grid_test.py  open_loop.py  open_loop_test.py  tasks.py  tasks_test.py
wmh/harness/: __init__.py  code_runtime.py  code_runtime_test.py  create.py  create_test.py  delta.py  delta_test.py  doc.py  doc_test.py  e2b_sandbox.py  e2b_sandbox_test.py  environment.py  live_session.py  live_session_test.py  mutate.py  mutate_test.py  pi_e2b.py  pi_e2b_test.py  pi_local.py  pi_local_test.py  pi_runtime.py  pi_runtime_test.py  pi_vendor.py  pi_vendor_test.py  population.py  population_test.py  project_proposer.py  project_proposer_test.py  proposer.py  proposer_test.py  runner_link.py  runner_link_test.py  runtime.py  runtime_test.py  scoring.py  scoring_test.py  skills.py  skills_test.py  source_tree.py  source_tree_test.py  (+6 more)
wmh/ingest/: __init__.py  adapter.py  base.py  base_test.py  braintrust.py  braintrust_test.py  langfuse.py  langfuse_test.py  langsmith.py  langsmith_test.py  mastra.py  mastra_test.py  messages.py  messages_test.py  normalize.py  normalize_test.py  otel_genai_envcap_roundtrip_test.py  otel_genai_test.py  otel_writer.py  otel_writer_test.py  phoenix.py  phoenix_test.py  posthog.py  posthog_test.py  quality.py  quality_test.py
wmh/optimize/: __init__.py  gepa.py  gepa_test.py  judge.py  judge_quality.py  judge_quality_test.py  judge_test.py  numeric.py
wmh/platform/: __init__.py  auth.py  auth_test.py  client.py  client_test.py  credentials.py  credentials_test.py  transfer.py  transfer_test.py
wmh/providers/: __init__.py  (+20 more)
(+346 files in other folders)
