[project]
name = "world-model-harness"
version = "0.1.0"
description = "Docker as an LLM: a frontier model acts as your agent's environment, reconstructed from OTel traces."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "click>=8.2",  # pins no_args_is_help semantics: help + usage-error exit 2 (<8.2 exited 0)
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "numpy>=1.26",
    "httpx>=0.27",
    "rich>=13.7",
    "gepa>=0.1.1",
    "tomli-w>=1.0",  # writing .wmh/config.toml (stdlib tomllib reads); every `wmh build` needs it
    "posthog>=7.0",
    # Provider SDKs ship with the core install: a fresh `uv sync` must serve every provider the
    # wizard offers without a "No module named ..." follow-up step.
    "anthropic>=0.39",
    "openai>=1.40",
    "boto3>=1.34",
]

[project.optional-dependencies]
otel = ["opentelemetry-proto>=1.24"]
# Plotting/figures for research runs; kept out of the core install.
viz = ["seaborn>=0.13", "matplotlib>=3.8"]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "ty>=0.0.1a1",
    "world-model-harness[otel,viz]",
]

[project.scripts]
wmh = "wmh.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wmh"]

[tool.pytest.ini_options]
# Tests live inline next to the modules they cover (foo.py -> foo_test.py).
python_files = ["*_test.py"]
testpaths = ["wmh"]

[tool.ruff]
line-length = 100
target-version = "py311"
# `examples/` holds isolated, self-contained task launch/capture helpers that can depend on their
# own benchmark environments. They are not part of the reusable `wmh` package.
extend-exclude = ["examples/", ".agents/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN", "BLE"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
# `plot_trace_scaling.py` is a one-off research figure that imports matplotlib ephemerally
# (`uv run --with matplotlib`), not a project dependency — exclude it from the type gate.
exclude = ["examples/", ".agents/"]
