[project]
name = "world-model-harness"
version = "0.1.0"
description = "Run agents, build world models from traces, and optimize agent harnesses."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "click>=8.2",  # pins no_args_is_help semantics: help + usage-error exit 2 (<8.2 exited 0)
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "numpy>=1.26",
    "httpx>=0.27",
    "rich>=13.7",
    # Workspace member (resolved from source via [tool.uv.sources]): the data-bundle
    # read core behind `wmh download` (stdlib-only; pushing needs the member's fetch extra).
    # RELEASE ORDER: environment-capture must be published to PyPI before any wmh release —
    # outside the workspace this dependency resolves from PyPI, not [tool.uv.sources].
    "environment-capture",
    "gepa>=0.1.1",
    "tomli-w>=1.0",  # writing .wmh/config.toml (stdlib tomllib reads); every `wmh build` needs it
    "posthog>=7.0",
    # Provider SDKs ship with the core install: a fresh `uv sync` must serve every provider the
    # wizard offers without a "No module named ..." follow-up step.
    "anthropic>=0.39",
    "openai>=1.40",
    "boto3>=1.34",
    "python-multipart>=0.0.9",  # FastAPI UploadFile for the build-your-own traces upload
]

[project.optional-dependencies]
otel = ["opentelemetry-proto>=1.24"]
# Plotting/figures for research runs (wmh research plot-concurrency); kept out of the core install.
# pandas backs the concurrency-scaling plot's tidy DataFrame.
viz = ["seaborn>=0.13", "matplotlib>=3.8", "pandas>=2.0"]
# The e2b harness backend (`--harness-backend e2b`): the pi-node harness PROCESS executes in
# pooled E2B microVMs while the environment stays the world model. Only those runs need it —
# local runs stay sandbox-free — so it is an optional extra imported lazily
# (wmh.harness.e2b_sandbox / wmh.harness.pi_e2b).
e2b = ["e2b>=2.0"]
# Context connectors (`wmh.connect`): the MCP client SDK backs the Notion connector's
# remote-MCP OAuth/pull path. Only that path needs it, so it is an optional extra imported
# lazily (wmh.connect.notion), same contract as the e2b extra above.
connectors = ["mcp>=1.27"]
# dev pulls in every backend SDK so `ty check` and the full test suite resolve over the whole
# project (the providers import anthropic/openai/boto3 lazily, but type-checking needs them present).
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "ty>=0.0.1a1",
    "world-model-harness[otel,viz,e2b,connectors]",
]

[dependency-groups]
# Workspace members join the dev environment (uv syncs the `dev` group by default) so the root
# gate covers their tests. Both members have graduated to [project.dependencies] —
# environment-capture when `wmh download` started consuming it, llm-waterfall when
# wmh.providers.waterfall did (see the RELEASE ORDER notes there). The dev group adds the
# members' heavy extras. The flagship wheel includes llm_waterfall's import package, while the
# workspace dependency keeps its own metadata and extras available for development and testing.
dev = ["llm-waterfall[all]", "environment-capture[bedrock,fetch]"]

[project.scripts]
wmh = "wmh.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wmh", "packages/llm-waterfall/llm_waterfall"]
exclude = ["**/*_test.py"]
force-include = { "packages/llm-waterfall/LICENSE" = "llm_waterfall/LICENSE" }

[tool.hatch.build.targets.sdist]
# Publish one flagship distribution. llm_waterfall is bundled because WMH imports it as a core
# implementation module; the environment-capture dependency already resolves from PyPI.
include = [
    "/wmh",
    "/packages/llm-waterfall/llm_waterfall",
    "/packages/llm-waterfall/LICENSE",
    "/README.md",
    "/pyproject.toml",
    "/conftest.py",
]

[tool.uv.workspace]
# The monorepo (AGENTS.md § Monorepo): root stays the `wmh` flagship package; members live
# under packages/, each independently published to PyPI. `uv sync` resolves the whole workspace.
members = ["packages/*"]

[tool.uv.sources]
# Inside the workspace, anything that depends on a member resolves it from source, not PyPI.
llm-waterfall = { workspace = true }
environment-capture = { workspace = true }

[tool.pytest.ini_options]
# Tests live inline next to the modules they cover (foo.py -> foo_test.py).
python_files = ["*_test.py"]
# One root gate covers the flagship and every Python member (same inline-test convention).
testpaths = ["wmh", "packages"]
# tau2-bench is a local clone of the external real-environment runner (own test suite, own
# deps) that lives beside the tau-bench member data; it is not part of this gate.
norecursedirs = ["tau2-bench"]

[tool.ruff]
line-length = 100
target-version = "py311"
# `examples/` holds isolated, self-contained task launch/capture helpers that can depend on their
# own benchmark environments. They are not part of the reusable `wmh` package.
extend-exclude = ["examples/", ".agents/",
    # Pre-contract benchmark dirs keep their examples-era exemption (legacy capture tooling).
    "packages/environment-capture/tau-bench/",
    "packages/environment-capture/terminal-tasks/",
    "packages/environment-capture/swe-bench/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN", "BLE", "T20"]

[tool.ruff.lint.per-file-ignores]
# The environment-capture member's benchmark capture/smoke/fetch scripts are operator-run CLIs
# that report progress on stdout/stderr — that is their product output, same class as the
# legacy dirs excluded above. The never-print rule (AGENTS.md § Python) binds `wmh/` in full.
"packages/environment-capture/**" = ["T20"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
# `plot_trace_scaling.py` is a one-off research figure that imports matplotlib ephemerally
# (`uv run --with matplotlib`), not a project dependency — exclude it from the type gate.
exclude = ["examples/", ".agents/",
    "packages/environment-capture/*/backend/",
    "packages/environment-capture/tau-bench/",
    "packages/environment-capture/terminal-tasks/",
    "packages/environment-capture/swe-bench/",
]
